<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background1"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/colorLightBlue"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/editIP"
            android:layout_width="320dp"
            android:layout_height="78dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ipaddress"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editPort"
            android:layout_width="320dp"
            android:layout_height="78dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/port"
            android:inputType="number"
            android:maxLength="5"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="320dp"
            android:layout_height="78dp"
            android:hint="@string/password"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textLogging"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>